# mimax

./: .gitignore  CMakeLists.txt  README.md
code/: CMakeLists.txt  GenerateSharpmake.bat  Main.sharpmake.cs
code/MCTS/: MCTS.sharpmake.cs  MCTS_PCH.cpp
code/MCTS_Test/: MCTS_Test.sharpmake.cs
code/Mimax/: CMakeLists.txt  Mimax.sharpmake.cs  Mimax_PCH.cpp
code/Mimax/Common/: ObjectPool.h
code/Mimax/Minimax/: IMinimaxAlgorithm.h  IMinimaxResolver.h  MinimaxAlgorithm.h  MinimaxAlgorithmHelper.h  (+2 more)
code/MimaxCommon/: MimaxCommon.sharpmake.cs  MimaxCommon_PCH.cpp  MimaxCommon_PCH.h
code/MimaxCommon_Test/: MimaxCommon_Test.sharpmake.cs
code/Mimax_Test/: CMakeLists.txt  Mimax_Test.sharpmake.cs  main.cpp
code/Mimax_Test/mimax_mock/mt/: TaskMock.h
code/Mimax_Test/mimax_mock/nn/: ActivationMock.h  LayerMock.h
code/Mimax_Test/mimax_test/common/: MatrixTest.cpp  Test_Common_Matrix.cpp  Test_MimaxCommon.cpp  Test_MimaxCommon.h
code/Mimax_Test/mimax_test/dma/: MCTSBaseTest.cpp  MctsBaseTest.cpp  MctsUtilityTest.cpp  MinimaxAlgorithmBaseTicTacToeTest.cpp  MinimaxBaseTicTacToeTest.cpp
code/Mimax_Test/mimax_test/minimax/: Test_Minimax.cpp  Test_Minimax.h  Test_Minimax_TicTacToe.cpp  Test_Minimax_TicTacToe.h
code/Mimax_Test/mimax_test/mt/: TasksRunnerTest.cpp
code/Mimax_Test/mimax_test/nn/: ActivationTest.cpp  LayerTest.cpp  NeuralNetworkTest.cpp
code/Mimax_TestAll/: Mimax_TestAll.sharpmake.cs  main.cpp
code/Minimax/: Minimax.sharpmake.cs  Minimax_PCH.cpp
code/Minimax_Test/: Minimax_Test.sharpmake.cs  main.cpp
code/Sharpmake/: Common.sharpmake.cs
(+54 files in other folders)
